# seedscape

./: .gitignore  AGENTS.md  LICENSE.txt  Makefile  README.md  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: main.py
backend/api/: campaigns.py  hexes.py
backend/core/: generator.py  storage.py
data/campaigns/default/: meta.json
data/campaigns/example/: biomes.css  meta.json
frontend/: .eslintrc.json  .prettierrc.json  eslint.config.js  index.html  main.js  package-lock.json  package.json  style.css
scripts/: check_build.py
src/seedscape/: main.py
src/seedscape/api/: campaigns.py  hexes.py
src/seedscape/core/: _math.py  envconfig.py  generator.py  models.py  noise.py  storage.py
tests/: conftest.py  test_api.py  test_envconfig.py  test_generator.py  test_noise.py  test_storage.py
tests/core/: test_math.py  test_noise.py
