[tool.poetry]
name = "seedscape"
version = "0.1.0"
description = "A procedurally generated Hexploration RPG engine where worlds grow from seeds."
authors = ["Der Mann mit Hut <DerMannMitHut@metstuebchen.de>"]
readme = "README.md"
license = "MIT"
keywords = ["rpg", "hexmap", "procedural-generation", "fastapi", "ai", "seedscape"]

packages = [{ include = "seedscape", from = "src" }]

include = [
  { path = "frontend", format = "sdist" },
  { path = "rules", format = "sdist" },
  { path = "data", format = "sdist" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = ">=0.115.0"
uvicorn = {version=">=0.30.0", extras=["standard"]}
pydantic = ">=2.7.0"
python-dotenv = ">=1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
black = ">=24.0.0"
ruff = ">=0.5.0"
mypy = ">=1.10.0"
types-python-dateutil = "*"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration: linting and formatting
[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
  ".git",
  ".venv",
  "dist",
  "build",
  "node_modules",
  "data",
]

[tool.ruff.lint]
# Enable common, modern, and safe rule sets
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # import sorting (isort)
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "PIE", # flake8-pie
  "RUF", # Ruff-specific rules
]


[tool.ruff.lint.isort]
known-first-party = ["seedscape"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 120
